--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -15,6 +15,10 @@ jobs:
   tests:
     name: tests
     uses: swiftlang/github-workflows/.github/workflows/swift_package_test.yml@main
+    with:
+      macos_xcode_versions: "[\"16.3\"]"
+      linux_exclude_swift_versions: "[{\"swift_version\": \"5.9\"}, {\"swift_version\": \"6.0\"}]"
+      windows_exclude_swift_versions: "[{\"swift_version\": \"5.9\"}, {\"swift_version\": \"6.0\"}]"
 
   wasm-sdk:
     name: WebAssembly SDK
