ci: Use a later version of swift for the swift-format check. This shoudl resolve discrepancies between local swift-format and CI-based swift-format.

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -9,6 +9,7 @@ jobs:
     name: Soundness
     uses: swiftlang/github-workflows/.github/workflows/soundness.yml@main
     with:
+      format_check_container_image: swift:6.1.0-noble
       license_header_check_enabled: false
       api_breakage_check_enabled: false
 
