--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -17,9 +17,15 @@ jobs:
     name: tests
     uses: swiftlang/github-workflows/.github/workflows/swift_package_test.yml@main
     with:
+      # Runners aren't set up for this currently in GitHub/PassiveLogic
       enable_macos_checks: false
+
       linux_exclude_swift_versions: "[{\"swift_version\": \"5.9\"}, {\"swift_version\": \"5.10\"}, {\"swift_version\": \"5.10.1\"}, {\"swift_version\": \"6.0\"}]"
       enable_windows_checks: false
+      enable_wasm_sdk_build: true
+
+      # TODO: Fix swift embedded, see https://github.com/PassiveLogic/swift-dispatch-async/issues/4
+      enable_embedded_wasm_sdk_build: false
 
   wasm-sdk:
     name: WebAssembly SDK
