--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   soundness:
     name: Soundness
-    uses: swiftlang/github-workflows/.github/workflows/soundness.yml@main
+    uses: swiftlang/github-workflows/.github/workflows/soundness.yml@0.0.2
     with:
       format_check_container_image: swift:6.1.0-noble
       license_header_check_enabled: false
@@ -15,7 +15,7 @@ jobs:
 
   tests:
     name: tests
-    uses: swiftlang/github-workflows/.github/workflows/swift_package_test.yml@main
+    uses: swiftlang/github-workflows/.github/workflows/swift_package_test.yml@0.0.2
     with:
       # Runners aren't set up for this currently in GitHub/PassiveLogic
       enable_macos_checks: false
